# tft_extraction_test

./: .gitignore  README.md
app/: README.md  airflow.env  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  riot_ingest_dag.py
app/configs/: airflow.env
app/dags/: riot_ingest_dag.py
