[tool.poetry]
name = "tft-lakehouse"
version = "0.1.0"
description = "TFT analytics with Riot API and modern data lakehouse stack"
authors = ["You <you@example.com>"]
packages = [{ include = "dags" }]

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = "^2.7.1"
requests = "^2.31.0"
boto3 = "^1.34.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
